--- a/wordpress/wp-content/plugins/tnf-news-platform/assets/css/frontend-mobile.css
+++ b/wordpress/wp-content/plugins/tnf-news-platform/assets/css/frontend-mobile.css
@@ -348,12 +348,6 @@
 	.single-tnf_video .tnf-video-embed[data-tnf-shorts='1'],
 	.single-tnf_video figure.tnf-video-embed--shorts {
 		--tnf-shorts-w: min(calc(100vw - var(--tnf-m-gutter) - var(--tnf-m-gutter-r)), 400px);
-		--tnf-shorts-h: min(
-			calc(var(--tnf-shorts-w) * 16 / 9),
-			calc(100dvh - 200px),
-			calc(100svh - 200px),
-			640px
-		);
 		padding-left: var(--tnf-m-gutter);
 		padding-right: var(--tnf-m-gutter-r);
 		box-sizing: border-box;
@@ -363,9 +357,7 @@
 	.single-tnf_video .tnf-video-embed[data-tnf-shorts='1'] .wp-block-embed__wrapper,
 	.single-tnf_video figure.tnf-video-embed--shorts .wp-block-embed__wrapper {
 		width: var(--tnf-shorts-w) !important;
-		height: var(--tnf-shorts-h) !important;
-		max-height: var(--tnf-shorts-h) !important;
-		padding-bottom: 0 !important;
+		max-height: min(calc(100dvh - 200px), calc(100svh - 200px), 640px);
 	}
 
 	.single-tnf_video .tnf-single-tnf-video,
